--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
   {{/unless}}
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css" >
+  <script src="bower_components/jquery/dist/jquery.js" type="text/javascript"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
 </head>
 <body>
   <app-root>Loading...</app-root>
