--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css" >
-  <script src="assets/jquery.js" type="text/javascript"></script>
+  <script src="assets/js/jquery.js" type="text/javascript"></script>
   <script src="assets/js/bootstrap.js" type="text/javascript"></script>
 </head>
 <body>
